<resources>
    <string name="app_name" translatable="false">Video Player Module</string>
    <string name="settings_name" translatable="false">AppRTC Settings</string>
    <string name="vpm">VPM</string>
    <string name="live">Live</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="room_description">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="videos">Videos</string>
    <string name="feeds">Feeds</string>
    <string name="no_feeds">No feeds found</string>
    <string name="no_videos">No videos found</string>
    <string name="play_video">Play Video</string>
    <string name="play_local_video">Play Local Video</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="exit_room_title">Room Creator</string>
    <string name="exit_room_msg">Do you want to end the session?</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="action_settings">Settings</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="missing_permissions_try_again">The application is missing permissions. It might not work correctly. Do you want to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_for_remove_room">Are you sure to remove this room? </string>
    <string name="already_live_title">Connection</string>
    <string name="already_live_msg">Already room is in live. Please close that session to start new one.</string>
    <string name="join_does_not_match">Joining room with %s does not exists.</string>
    <string name="create_does_not_match">Starting camera session with %s already exists.</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="enter_room_name">Enter the room name</string>
    <string name="cancel">Cancel</string>
    <string name="local_video">Local Video</string>
    <string name="local_audio">Local Audio</string>
    <string name="remote_video">Remote Video</string>
    <string name="remote_audio">Remote Audio</string>
    <string name="room_name_alert">Please enter the room name</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="info">Info</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="full_screen">FullScreen</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="current_position">00:00 / </string>
    <string name="total_duration">00:00</string>
    <string name="cast">Cast</string>
    <string name="move_sec">10</string>
    <string name="switch_video">Switch Video</string>
    <string name="local">LOCAL</string>
    <string name="rtsp">RTSP</string>
    <string name="hls">HLS</string>
    <string name="https">HTTPS</string>
    <string name="others">OTHERS</string>
    <string name="pref_sl_server_key">sl_server_settings_key</string>
    <string name="pref_server_title">SL Server Settings</string>
    <string name="pref_enable_sl_server_key">sl_server_preference</string>
    <string name="pref_enable_logging_key">enable_logging</string>
    <string name="pref_enable_server_title">Use SL Server for Signaling.</string>
    <string name="pref_sl_server_url_key">sl_server_url</string>
    <string name="pref_enable_sl_turn_server_key">sl_turn_server_preference</string>
    <string name="pref_enable_sl_turn_server_title">Use SL TURN Server for NAT</string>
    <string name="pref_default_sl_server_url_demo">https://backend.smashedlabs-dev.net/</string>
    <string name="pref_enable_sl_server">Use SL Server</string>
    <string name="pref_enable_Logging">Enable Log</string>
    <string name="pref_server_ip_address">Server IP Address</string>
    <string name="pref_load_vpm_video_url_key">Load Local File</string>
    <string name="pref_load_vpm_video_url_title">Load from vpm/videos</string>
    <string name="pref_load_http_url_key">Load Http Url</string>
    <string name="pref_load_http_url_title">Load HTTP from Json</string>
    <string name="pref_load_rtsp_url_key">Load RTSP Url</string>
    <string name="pref_load_rtsp_url_title">Load RTSP from Json</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_default">Default</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_enable_save_input_audio_to_file_key">enable_key</string>
    <string name="pref_enable_save_input_audio_to_file_title">Save input audio to file.</string>
    <string name="pref_enable_save_input_audio_to_file_dlg">Save input audio to file.</string>
    <string name="pref_enable_save_input_audio_to_file_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_dlg">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Hardware AEC is not available</string>
    <string name="pref_disable_built_in_agc_key">disable_built_in_agc_preference</string>
    <string name="pref_miscsettings_key">misc_settings_key</string>
    <string name="pref_miscsettings_title">Miscellaneous settings.</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">https://appr.tc</string>
</resources>