<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/pref_sl_server_key"
        android:layout="@layout/category_item"
        android:title="@string/pref_server_title"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_enable_sl_server_key"
            android:title="@string/pref_enable_sl_server"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_sl_server_url_demo"
            android:dialogTitle="URL (Format: http://52.45.171.205:9090:9090)"
            android:inputType="textUri"
            android:key="@string/pref_sl_server_url_key"
            android:title="@string/pref_server_ip_address"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_enable_sl_turn_server_key"
            android:title="@string/pref_enable_sl_turn_server_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_videosettings_key"
        android:layout="@layout/category_item"
        android:title="@string/pref_videosettings_title"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="@string/pref_resolution_default"
            android:dialogTitle="@string/pref_resolution_dlg"
            android:entries="@array/videoResolutions"
            android:entryValues="@array/videoResolutionsValues"
            android:key="@string/pref_resolution_key"
            android:title="@string/pref_resolution_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <!--  <PreferenceCategory
          android:key="@string/pref_videosettings_key"
          android:layout="@layout/category_item"
          android:title="@string/pref_videosettings_title"
          app:iconSpaceReserved="false">

          <CheckBoxPreference
              android:defaultValue="@string/pref_videocall_default"
              android:dialogTitle="@string/pref_videocall_dlg"
              android:key="@string/pref_videocall_key"
              android:title="@string/pref_videocall_title"
              app:iconSpaceReserved="false" />

          <CheckBoxPreference
              android:defaultValue="@string/pref_screencapture_default"
              android:key="@string/pref_screencapture_key"
              android:title="@string/pref_screencapture_title"
              app:iconSpaceReserved="false" />

          <CheckBoxPreference
              android:defaultValue="@string/pref_camera2_default"
              android:key="@string/pref_camera2_key"
              android:title="@string/pref_camera2_title"
              app:iconSpaceReserved="false" />

          <ListPreference
              android:defaultValue="@string/pref_resolution_default"
              android:dialogTitle="@string/pref_resolution_dlg"
              android:entries="@array/videoResolutions"
              android:entryValues="@array/videoResolutionsValues"
              android:key="@string/pref_resolution_key"
              android:title="@string/pref_resolution_title"
              app:iconSpaceReserved="false" />

          <ListPreference
              android:defaultValue="@string/pref_fps_default"
              android:dialogTitle="@string/pref_fps_dlg"
              android:entries="@array/cameraFps"
              android:entryValues="@array/cameraFps"
              android:key="@string/pref_fps_key"
              android:title="@string/pref_fps_title"
              app:iconSpaceReserved="false" />

          <CheckBoxPreference
              android:defaultValue="@string/pref_capturequalityslider_default"
              android:dialogTitle="@string/pref_capturequalityslider_dlg"
              android:key="@string/pref_capturequalityslider_key"
              android:title="@string/pref_capturequalityslider_title"
              app:iconSpaceReserved="false" />

          <ListPreference
              android:defaultValue="@string/pref_maxvideobitrate_default"
              android:dialogTitle="@string/pref_maxvideobitrate_dlg"
              android:entries="@array/startBitrate"
              android:entryValues="@array/startBitrate"
              android:key="@string/pref_maxvideobitrate_key"
              android:title="@string/pref_maxvideobitrate_title"
              app:iconSpaceReserved="false" />

          <EditTextPreference
              android:defaultValue="@string/pref_maxvideobitratevalue_default"
              android:dialogTitle="@string/pref_maxvideobitratevalue_dlg"
              android:inputType="number"
              android:key="@string/pref_maxvideobitratevalue_key"
              android:title="@string/pref_maxvideobitratevalue_title"
              app:iconSpaceReserved="false" />

     &lt;!&ndash;     <ListPreference
              android:defaultValue="@string/pref_videocodec_default"
              android:dialogTitle="@string/pref_videocodec_dlg"
              android:entries="@array/videoCodecs"
              android:entryValues="@array/videoCodecs"
              android:key="@string/pref_videocodec_key"
              android:title="@string/pref_videocodec_title"
              app:iconSpaceReserved="false" />

          <CheckBoxPreference
              android:defaultValue="@string/pref_hwcodec_default"
              android:dialogTitle="@string/pref_hwcodec_dlg"
              android:key="@string/pref_hwcodec_key"
              android:title="@string/pref_hwcodec_title"
              app:iconSpaceReserved="false" />

          <CheckBoxPreference
              android:defaultValue="@string/pref_capturetotexture_default"
              android:dialogTitle="@string/pref_capturetotexture_dlg"
              android:key="@string/pref_capturetotexture_key"
              android:title="@string/pref_capturetotexture_title"
              app:iconSpaceReserved="false" />

          <CheckBoxPreference
              android:defaultValue="@string/pref_flexfec_default"
              android:dialogTitle="@string/pref_flexfec_dlg"
              android:key="@string/pref_flexfec_key"
              android:title="@string/pref_flexfec_title"
              app:iconSpaceReserved="false" />&ndash;&gt;
      </PreferenceCategory>-->

    <!-- <PreferenceCategory
         android:key="@string/pref_audiosettings_key"
         android:layout="@layout/category_item"
         android:title="@string/pref_audiosettings_title"
         app:iconSpaceReserved="false">

         <ListPreference
             android:defaultValue="@string/pref_startaudiobitrate_default"
             android:dialogTitle="@string/pref_startaudiobitrate_dlg"
             android:entries="@array/startBitrate"
             android:entryValues="@array/startBitrate"
             android:key="@string/pref_startaudiobitrate_key"
             android:title="@string/pref_startaudiobitrate_title"
             app:iconSpaceReserved="false" />

      &lt;!&ndash;   <EditTextPreference
             android:defaultValue="@string/pref_startaudiobitratevalue_default"
             android:dialogTitle="@string/pref_startaudiobitratevalue_dlg"
             android:inputType="number"
             android:key="@string/pref_startaudiobitratevalue_key"
             android:title="@string/pref_startaudiobitratevalue_title"
             app:iconSpaceReserved="false" />&ndash;&gt;

      &lt;!&ndash;   <ListPreference
             android:defaultValue="@string/pref_audiocodec_default"
             android:dialogTitle="@string/pref_audiocodec_dlg"
             android:entries="@array/audioCodecs"
             android:entryValues="@array/audioCodecs"
             android:key="@string/pref_audiocodec_key"
             android:title="@string/pref_audiocodec_title"
             app:iconSpaceReserved="false" />&ndash;&gt;

         <CheckBoxPreference
             android:defaultValue="@string/pref_noaudioprocessing_default"
             android:dialogTitle="@string/pref_noaudioprocessing_dlg"
             android:key="@string/pref_noaudioprocessing_key"
             android:title="@string/pref_noaudioprocessing_title"
             app:iconSpaceReserved="false" />

         <CheckBoxPreference
             android:defaultValue="@string/pref_aecdump_default"
             android:dialogTitle="@string/pref_aecdump_dlg"
             android:key="@string/pref_aecdump_key"
             android:title="@string/pref_aecdump_title"
             app:iconSpaceReserved="false" />

         <CheckBoxPreference
             android:defaultValue="@string/pref_enable_save_input_audio_to_file_default"
             android:dialogTitle="@string/pref_enable_save_input_audio_to_file_dlg"
             android:key="@string/pref_enable_save_input_audio_to_file_key"
             android:title="@string/pref_enable_save_input_audio_to_file_title"
             app:iconSpaceReserved="false" />

         <CheckBoxPreference
             android:defaultValue="@string/pref_opensles_default"
             android:dialogTitle="@string/pref_opensles_dlg"
             android:key="@string/pref_opensles_key"
             android:title="@string/pref_opensles_title"
             app:iconSpaceReserved="false" />

      &lt;!&ndash;   <CheckBoxPreference
             android:defaultValue="@string/pref_disable_built_in_aec_default"
             android:dialogTitle="@string/pref_disable_built_in_aec_dlg"
             android:key="@string/pref_disable_built_in_aec_key"
             android:title="@string/pref_disable_built_in_aec_title"
             app:iconSpaceReserved="false" />&ndash;&gt;

         <CheckBoxPreference
             android:defaultValue="@string/pref_disable_built_in_agc_default"
             android:dialogTitle="@string/pref_disable_built_in_agc_dlg"
             android:key="@string/pref_disable_built_in_agc_key"
             android:title="@string/pref_disable_built_in_agc_title"
             app:iconSpaceReserved="false" />

         <CheckBoxPreference
             android:defaultValue="@string/pref_disable_built_in_ns_default"
             android:dialogTitle="@string/pref_disable_built_in_ns_dlg"
             android:key="@string/pref_disable_built_in_ns_key"
             android:title="@string/pref_disable_built_in_ns_title"
             app:iconSpaceReserved="false" />

         <CheckBoxPreference
             android:defaultValue="@string/pref_disable_webrtc_agc_default"
             android:key="@string/pref_disable_webrtc_agc_and_hpf_key"
             android:title="@string/pref_disable_webrtc_agc_and_hpf_title"
             app:iconSpaceReserved="false" />

         <ListPreference
             android:defaultValue="@string/pref_speakerphone_default"
             android:dialogTitle="@string/pref_speakerphone_dlg"
             android:entries="@array/speakerphone"
             android:entryValues="@array/speakerphoneValues"
             android:key="@string/pref_speakerphone_key"
             android:title="@string/pref_speakerphone_title"
             app:iconSpaceReserved="false" />
     </PreferenceCategory>-->

    <!--   <PreferenceCategory
           android:key="@string/pref_datasettings_key"
           android:layout="@layout/category_item"
           android:title="@string/pref_datasettings_title"
           app:iconSpaceReserved="false">

           <CheckBoxPreference
               android:defaultValue="@string/pref_enable_datachannel_default"
               android:key="@string/pref_enable_datachannel_key"
               android:title="@string/pref_enable_datachannel_title"
               app:iconSpaceReserved="false" />

           <CheckBoxPreference
               android:defaultValue="@string/pref_ordered_default"
               android:key="@string/pref_ordered_key"
               android:title="@string/pref_ordered_title"
               app:iconSpaceReserved="false" />

           <EditTextPreference
               android:defaultValue="@string/pref_data_protocol_default"
               android:dialogTitle="@string/pref_data_protocol_dlg"
               android:inputType="text"
               android:key="@string/pref_data_protocol_key"
               android:title="@string/pref_data_protocol_title"
               app:iconSpaceReserved="false" />

           <CheckBoxPreference
               android:defaultValue="@string/pref_negotiated_default"
               android:key="@string/pref_negotiated_key"
               android:title="@string/pref_negotiated_title"
               app:iconSpaceReserved="false" />

           <EditTextPreference
               android:defaultValue="@string/pref_max_retransmit_time_ms_default"
               android:dialogTitle="@string/pref_max_retransmit_time_ms_dlg"
               android:inputType="number"
               android:key="@string/pref_max_retransmit_time_ms_key"
               android:title="@string/pref_max_retransmit_time_ms_title"
               app:iconSpaceReserved="false" />

           <EditTextPreference
               android:defaultValue="@string/pref_max_retransmits_default"
               android:dialogTitle="@string/pref_max_retransmits_dlg"
               android:inputType="number"
               android:key="@string/pref_max_retransmits_key"
               android:title="@string/pref_max_retransmits_title"
               app:iconSpaceReserved="false" />

           <EditTextPreference
               android:defaultValue="@string/pref_data_id_default"
               android:dialogTitle="@string/pref_data_id_dlg"
               android:inputType="number"
               android:key="@string/pref_data_id_key"
               android:title="@string/pref_data_id_title"
               app:iconSpaceReserved="false" />
       </PreferenceCategory>-->

    <PreferenceCategory
        android:key="@string/pref_miscsettings_key"
        android:layout="@layout/category_item"
        android:title="@string/pref_miscsettings_title"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:defaultValue="@string/pref_room_server_url_default"
            android:dialogTitle="@string/pref_room_server_url_dlg"
            android:inputType="text"
            android:key="@string/pref_room_server_url_key"
            android:title="@string/pref_room_server_url_title"
            app:iconSpaceReserved="false" />

        <!-- <CheckBoxPreference
             android:defaultValue="@string/pref_displayhud_default"
             android:dialogTitle="@string/pref_displayhud_dlg"
             android:key="@string/pref_displayhud_key"
             android:title="@string/pref_displayhud_title"
             app:iconSpaceReserved="false" />

         <CheckBoxPreference
             android:defaultValue="@string/pref_tracing_default"
             android:dialogTitle="@string/pref_tracing_dlg"
             android:key="@string/pref_tracing_key"
             android:title="@string/pref_tracing_title"
             app:iconSpaceReserved="false" />

         <CheckBoxPreference
             android:defaultValue="@string/pref_enable_rtceventlog_default"
             android:key="@string/pref_enable_rtceventlog_key"
             android:title="@string/pref_enable_rtceventlog_title"
             app:iconSpaceReserved="false" />-->
    </PreferenceCategory>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_enable_logging_key"
        android:title="@string/pref_enable_Logging"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_load_vpm_video_url_key"
        android:title="@string/pref_load_vpm_video_url_title"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_load_http_url_key"
        android:title="@string/pref_load_http_url_title"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_load_rtsp_url_key"
        android:title="@string/pref_load_rtsp_url_title"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
