<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_shape">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/lltRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="8dp"
                android:text="@string/enter_room_name"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtRoomName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edt_border"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lltLocalCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lltRoomName"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbLocalVideo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:onClick="onCheckboxClicked"
                android:padding="5dp"
                android:text="@string/local_video"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbLocalAudio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:onClick="onCheckboxClicked"
                android:padding="5dp"
                android:text="@string/local_audio"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lltRemoteCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lltLocalCheckBox"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbRemoteVideo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:onClick="onCheckboxClicked"
                android:padding="5dp"
                android:text="@string/remote_video"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbRemoteAudio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:onClick="onCheckboxClicked"
                android:padding="5dp"
                android:text="@string/remote_audio"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lltRemoteCheckBox"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_40"
                android:background="@drawable/btn_cancel"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_40"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_start"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>